--- a/trunk/gbxemu/projects/visualc8/gbxemu.vcproj
+++ b/trunk/gbxemu/projects/visualc8/gbxemu.vcproj
@@ -41,7 +41,12 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
+				Optimization="4"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
+				EnableFiberSafeOptimizations="true"
 				AdditionalIncludeDirectories="../../../zlib/src;../../../libpng/src;../../../sdl/include"
 				PreprocessorDefinitions="WIN32;ZLIB_DLL;PNG_USE_DLL;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
