--- a/trunk/VBA-S/prj/msvc2008/VBA-S.vcproj
+++ b/trunk/VBA-S/prj/msvc2008/VBA-S.vcproj
@@ -30,7 +30,6 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				ExcludedFromBuild="true"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -82,7 +81,6 @@
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
-				ExcludedFromBuild="true"
 			/>
 			<Tool
 				Name="VCLinkerTool"
@@ -122,7 +120,6 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				ExcludedFromBuild="true"
 			/>
 		</Configuration>
 		<Configuration
@@ -139,7 +136,6 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				ExcludedFromBuild="true"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -188,7 +184,6 @@
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
-				ExcludedFromBuild="true"
 			/>
 			<Tool
 				Name="VCLinkerTool"
@@ -235,9 +230,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Signing executable..."
-				CommandLine="protect.exe $(TargetPath)"
-				ExcludedFromBuild="false"
+				Description=""
+				CommandLine=""
 			/>
 		</Configuration>
 	</Configurations>
@@ -797,14 +791,6 @@
 			</File>
 			<File
 				RelativePath="..\..\src\Port.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\win32\protect.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\win32\protect.h"
 				>
 			</File>
 			<File
