REMOVE png support

--- a/trunk/vbam/trunk/project/vc2008_mfc/VBA2008.vcproj
+++ b/trunk/vbam/trunk/project/vc2008_mfc/VBA2008.vcproj
@@ -86,7 +86,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="nafxcwd.lib libcmtd.lib zlibd.lib libpngd.lib"
+				AdditionalDependencies="nafxcwd.lib libcmtd.lib zlibd.lib"
 				OutputFile="$(OutDir)\VisualBoyAdvance-M.exe"
 				Version=""
 				LinkIncremental="2"
@@ -194,14 +194,14 @@
 				Name="VCLinkerTool"
 				RegisterOutput="false"
 				IgnoreImportLibrary="false"
-				AdditionalDependencies="nafxcw.lib libcmt.lib zlib.lib libpng.lib"
+				AdditionalDependencies="nafxcw.lib libcmt.lib zlib.lib"
 				OutputFile="$(OutDir)\VisualBoyAdvance-M.exe"
 				Version=""
 				LinkIncremental="0"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=""
 				AdditionalManifestDependencies=""
-				IgnoreDefaultLibraryNames="nafxcw.lib;libcmt.lib;libcmtd.lib"
+				IgnoreDefaultLibraryNames="nafxcw.lib;libcmt.lib"
 				GenerateDebugInformation="false"
 				AssemblyDebug="2"
 				GenerateMapFile="false"
