REMOVE zlib dependency from core&gui

--- a/trunk/vbam/dependencies/File_Extractor-0.4.3/File_Extractor2008.vcproj
+++ b/trunk/vbam/dependencies/File_Extractor-0.4.3/File_Extractor2008.vcproj
@@ -60,6 +60,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalDependencies="zlibd.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -120,6 +121,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalDependencies="zlib.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
