remove GB mono BIOS settings

--- a/trunk/vbam/trunk/src/win32/VBA.rc
+++ b/trunk/vbam/trunk/src/win32/VBA.rc
@@ -813,23 +813,19 @@ BEGIN
     EDITTEXT        IDC_COMMENT,84,24,180,12,ES_AUTOHSCROLL
 END
 
-IDD_BIOS DIALOGEX 0, 0, 220, 126
+IDD_BIOS DIALOGEX 0, 0, 220, 82
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "BIOS Files"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,84,102,60,18
-    PUSHBUTTON      "Cancel",IDCANCEL,150,102,60,18
-    GROUPBOX        "Game Boy mono",IDC_STATIC,6,6,210,30
-    GROUPBOX        "Game Boy Advance",IDC_STATIC,6,48,210,30
-    EDITTEXT        IDC_GB_BIOS_PATH,12,18,180,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_GBA_BIOS_PATH,12,60,180,12,ES_AUTOHSCROLL
-    GROUPBOX        "Options",IDC_STATIC,6,90,72,30
-    CONTROL         "Skip boot logo",IDC_SKIP_BOOT_LOGO,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,12,102,60,12
-    CONTROL         "Enable",IDC_ENABLE_GB_BIOS,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,174,6,36,8
-    CONTROL         "Enable",IDC_ENABLE_GBA_BIOS,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,174,48,36,8
-    PUSHBUTTON      "...",IDC_SELECT_GB_BIOS_PATH,192,18,18,12
-    PUSHBUTTON      "...",IDC_SELECT_GBA_BIOS_PATH,192,60,18,12
+    DEFPUSHBUTTON   "OK",IDOK,84,60,60,18
+    PUSHBUTTON      "Cancel",IDCANCEL,150,60,60,18
+    GROUPBOX        "GBA - 16 KB - CRC 81977335",IDC_STATIC,6,6,210,30
+    EDITTEXT        IDC_GBA_BIOS_PATH,12,18,180,12,ES_AUTOHSCROLL
+    GROUPBOX        "Options",IDC_STATIC,6,48,72,30
+    CONTROL         "Skip boot logo",IDC_SKIP_BOOT_LOGO,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,12,60,60,12
+    CONTROL         "Enable",IDC_ENABLE_GBA_BIOS,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,174,6,36,8
+    PUSHBUTTON      "...",IDC_SELECT_GBA_BIOS_PATH,192,18,18,12
 END
 
 IDD_FULLSCREEN DIALOGEX 0, 0, 167, 96
@@ -1143,7 +1139,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 213
         TOPMARGIN, 7
-        BOTTOMMARGIN, 119
+        BOTTOMMARGIN, 75
     END
 
     IDD_FULLSCREEN, DIALOG
